--- a/application/admin/view/information/index.html
+++ b/application/admin/view/information/index.html
@@ -7,7 +7,7 @@
                 <div class="widget-body no-padding">
                     <div id="toolbar" class="toolbar">
                         {:build_toolbar()}
-                        <div class="dropdown btn-group {:$auth->check('user/multi')?'':'hide'}">
+                        <div class="dropdown btn-group {:$auth->check('information/multi')?'':'hide'}">
                             <a class="btn btn-primary btn-more dropdown-toggle btn-disabled disabled" data-toggle="dropdown"><i class="fa fa-cog"></i> {:__('More')}</a>
                             <ul class="dropdown-menu text-left" role="menu">
                                 <li><a class="btn btn-link btn-multi btn-disabled disabled" href="javascript:;" data-params="status=normal"><i class="fa fa-eye"></i> {:__('Set to normal')}</a></li>
@@ -16,8 +16,8 @@
                         </div>
                     </div>
                     <table id="table" class="table table-striped table-bordered table-hover" 
-                           data-operate-edit="{:$auth->check('user/edit')}" 
-                           data-operate-del="{:$auth->check('user/del')}" 
+                           data-operate-edit="{:$auth->check('information/edit')}" 
+                           data-operate-del="{:$auth->check('information/del')}" 
                            width="100%">
                     </table>
                 </div>
