--- a/application/admin/view/user/edit.html
+++ b/application/admin/view/user/edit.html
@@ -31,21 +31,15 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="c-prevtime" class="control-label col-xs-12 col-sm-2">{:__('Prevtime')}:</label>
+        <label for="c-vip" class="control-label col-xs-12 col-sm-2">{:__('Vip')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-prevtime" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[prevtime]" type="text" value="{$row.prevtime|datetime}">
+            <input id="c-vip" data-rule="required" class="form-control" name="row[vip]" type="number" value="{$row.vip}">
         </div>
     </div>
     <div class="form-group">
-        <label for="c-jointime" class="control-label col-xs-12 col-sm-2">{:__('Jointime')}:</label>
+        <label for="c-vip_expire_time" class="control-label col-xs-12 col-sm-2">{:__('Vip_expire_time')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-jointime" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[jointime]" type="text" value="{$row.jointime|datetime}">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-token" class="control-label col-xs-12 col-sm-2">{:__('Token')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-token" data-rule="required" class="form-control" name="row[token]" type="text" value="{$row.token}">
+            <input id="c-vip_expire_time" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[vip_expire_time]" type="text" value="{$row.vip_expire_time|datetime}">
         </div>
     </div>
     <div class="form-group">
