--- a/application/admin/view/user/add.html
+++ b/application/admin/view/user/add.html
@@ -31,22 +31,17 @@
         </div>
     </div>
     <div class="form-group">
-        <label for="c-prevtime" class="control-label col-xs-12 col-sm-2">{:__('Prevtime')}:</label>
+        <label for="c-vip" class="control-label col-xs-12 col-sm-2">{:__('Vip')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-prevtime" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[prevtime]" type="text" value="{:date('Y-m-d H:i:s')}">
+            <input id="c-vip" data-rule="required" class="form-control" name="row[vip]" type="number">
         </div>
     </div>
     <div class="form-group">
-        <label for="c-jointime" class="control-label col-xs-12 col-sm-2">{:__('Jointime')}:</label>
+        <label for="c-vip_expire_time" class="control-label col-xs-12 col-sm-2">{:__('Vip_expire_time')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-jointime" data-rule="required" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[jointime]" type="text" value="{:date('Y-m-d H:i:s')}">
+            <input id="c-vip_expire_time" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[vip_expire_time]" type="text" value="{:date('Y-m-d H:i:s')}">
         </div>
     </div>
-    <div class="form-group">
-        <label for="c-token" class="control-label col-xs-12 col-sm-2">{:__('Token')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-token" data-rule="required" class="form-control" name="row[token]" type="text" value="">
-        </div>
     </div>
     <div class="form-group">
         <label for="c-status" class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
