--- a/application/admin/view/push/add.html
+++ b/application/admin/view/push/add.html
@@ -15,13 +15,7 @@
     <div class="form-group">
         <label for="c-status" class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-status" data-rule="required" class="form-control" name="row[status]" type="number">
-        </div>
-    </div>
-    <div class="form-group">
-        <label for="c-time" class="control-label col-xs-12 col-sm-2">{:__('Time')}:</label>
-        <div class="col-xs-12 col-sm-8">
-            <input id="c-time" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[time]" type="text" value="{:date('Y-m-d H:i:s')}">
+            {:build_radios('row[status]', ['0'=>__('暂不推送'), '1'=>__('立即推送')])}
         </div>
     </div>
     <div class="form-group layer-footer">
