--- a/application/admin/view/information/edit.html
+++ b/application/admin/view/information/edit.html
@@ -21,6 +21,12 @@
         </div>
     </div>
     <div class="form-group">
+        <label for="c-title" class="control-label col-xs-12 col-sm-2">{:__('Title')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-title" class="form-control" name="row[title]" type="text" value="{$row.title}">
+        </div>
+    </div>
+    <div class="form-group">
         <label for="c-images" class="control-label col-xs-12 col-sm-2">{:__('Images')}:</label>
         <div class="col-xs-12 col-sm-8">
             <div class="input-group">
