--- a/application/admin/view/user/add.html
+++ b/application/admin/view/user/add.html
@@ -27,13 +27,13 @@
     <div class="form-group">
         <label for="c-system" class="control-label col-xs-12 col-sm-2">{:__('System')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-system" data-rule="required" class="form-control" name="row[system]" type="number">
+            {:build_radios('row[system]', ['0'=>__('Android'), '1'=>__('iOS')])}
         </div>
     </div>
     <div class="form-group">
         <label for="c-vip" class="control-label col-xs-12 col-sm-2">{:__('Vip')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-vip" data-rule="required" class="form-control" name="row[vip]" type="number">
+            {:build_radios('row[vip]', ['0'=>__('否'), '1'=>__('是')])}
         </div>
     </div>
     <div class="form-group">
@@ -42,11 +42,10 @@
             <input id="c-vip_expire_time" class="form-control datetimepicker" data-date-format="YYYY-MM-DD HH:mm:ss" data-use-current="true" name="row[vip_expire_time]" type="text" value="{:date('Y-m-d H:i:s')}">
         </div>
     </div>
-    </div>
     <div class="form-group">
         <label for="c-status" class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
         <div class="col-xs-12 col-sm-8">
-            <input id="c-status" data-rule="required" class="form-control" name="row[status]" type="text" value="">
+            {:build_radios('row[status]', ['normal'=>__('Normal'), 'hidden'=>__('Hidden')])}
         </div>
     </div>
     <div class="form-group layer-footer">
