--- a/application/admin/view/update/pargram/edit.html
+++ b/application/admin/view/update/pargram/edit.html
@@ -21,7 +21,7 @@
     <div class="form-group">
         <label for="c-isforce" class="control-label col-xs-12 col-sm-2">{:__('Isforce')}:</label>
         <div class="col-xs-12 col-sm-8">
-            {:build_radios('row[isforce]', ['0'=>__('否'), '1'=>__('是')], $row.isforce)}
+            <input id="c-isforce" class="form-control" name="row[isforce]" type="number" value="{$row.isforce}">
         </div>
     </div>
     <div class="form-group">
@@ -34,6 +34,48 @@
         <label for="c-file_md5" class="control-label col-xs-12 col-sm-2">{:__('File_md5')}:</label>
         <div class="col-xs-12 col-sm-8">
             <input id="c-file_md5" class="form-control" name="row[file_md5]" type="text" value="{$row.file_md5}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-ditch" class="control-label col-xs-12 col-sm-2">{:__('Ditch')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-ditch" class="form-control" name="row[ditch]" type="number" value="{$row.ditch}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-debug" class="control-label col-xs-12 col-sm-2">{:__('Debug')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-debug" class="form-control" name="row[debug]" type="number" value="{$row.debug}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-cpu_x" class="control-label col-xs-12 col-sm-2">{:__('Cpu_x')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-cpu_x" class="form-control" name="row[cpu_x]" type="number" value="{$row.cpu_x}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-cpu_platform" class="control-label col-xs-12 col-sm-2">{:__('Cpu_platform')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-cpu_platform" class="form-control" name="row[cpu_platform]" type="number" value="{$row.cpu_platform}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-brand" class="control-label col-xs-12 col-sm-2">{:__('Brand')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-brand" class="form-control" name="row[brand]" type="text" value="{$row.brand}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-uuid" class="control-label col-xs-12 col-sm-2">{:__('Uuid')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-uuid" class="form-control" name="row[uuid]" type="text" value="{$row.uuid}">
+        </div>
+    </div>
+    <div class="form-group">
+        <label for="c-status" class="control-label col-xs-12 col-sm-2">{:__('Status')}:</label>
+        <div class="col-xs-12 col-sm-8">
+            <input id="c-status" data-rule="required" class="form-control" name="row[status]" type="number" value="{$row.status}">
         </div>
     </div>
     <div class="form-group layer-footer">
